--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
-    <title>Hello Html</title>
+    <title>加载中...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="shortcut icon" href="https://www.imooc.com/favicon.ico">
+
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/jquery-1.11.1.min.js"></script>
+    <script src="./js/jquery.particleground.min.js"></script>
 </head>
+
 <body>
-<p>Hello Html .</p>
+    <div id="bg"></div>
+    <div class="main">
+        <div class="item">
+            <div class="menu guide1">
+                <summary class="title">Android 学习指引</summary>
+                <p class="des">Read The Fucking Source Code。</p>
+            </div>
+        </div>
+        <div class="item">
+            <div class="menu guide2">
+                <summary>Android 假数据接口</summary>
+                <p class="des">很多问题不见得会出在你身上，但你亦需要想法解决问题，否则就会变成你的问题；</p>
+            </div>
+        </div>
+    </div>
+    <script src="./js/index.js"></script>
 </body>
+
 </html>
